--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,17 +1,17 @@
 {
   "name": "BackEnd",
   "version": "0.0.1",
-  "description": "",
+  "description": "API do Guard - Gerenciador de Contatos",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main.js",
     "start:mongodb": "mkdir -p data && mongod --dbpath=data",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -30,7 +30,6 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@types/multer": "^2.0.0",
-    "@types/nodemailer": "^7.0.1",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
